# retail-ai

./: .coveragerc  .gitignore  01_ingest-and-transform.py  01_provision-catalog.py  02_provision-vector-search.py  03_generate_evaluation_data.py  04_unity_catalog_tools.py  05_agent_as_code_driver.py  05_agent_as_code_driver.py.py  06_run_examples.py  99_scratchpad.py  Makefile  README.md  agent_as_code.json  agent_as_code.py  agent_as_config.json  agent_as_config.yaml  agent_as_config_base.yaml  main.py  model_config.yaml  pyproject.toml  requirements.txt
data/retail/: grill_products.sql  inventory.snappy.parquet  inventory.sql  inventory_data.sql  product_data.sql  products.sql  tables.sql
retail_ai/: agents.py  catalog.py  config.py  datasets.py  graph.py  guardrails.py  messages.py  models.py  nodes.py  state.py  tools.py  types.py  utils.py  vector_search.py
tests/: conftest.py  test_config.py
