[build-system]
requires = ["hatchling", "tomli"]
build-backend = "hatchling.build"

[project]
name = "retail-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "databricks-agents>=0.20.0",
    "databricks-langchain>=0.4.2",
    "databricks-sdk>=0.50.0",
    "grandalf>=0.8",
    "langchain>=0.3.24",
    "langgraph==0.3.31",
    "langgraph-checkpoint-postgres>=2.0.21",
    "mlflow>=2.21.3",
    "psycopg[binary,pool]>=3.2.6",
    "pydantic>=2.11.3",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.7",
]

[tool.hatch.build.targets.wheel]
packages = ["retail_ai"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
