[project]
name = "retail-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "databricks-agents>=0.20.0",
    "databricks-langchain>=0.4.2",
    "databricks-sdk>=0.50.0",
    "grandalf>=0.8",
    "langchain>=0.3.24",
    "langgraph==0.3.31",
    "langgraph-checkpoint-postgres>=2.0.21",
    "loguru>=0.7.3",
    "mlflow>=2.21.3",
    "psycopg[binary,pool]>=3.2.6",
    "pydantic>=2.11.3",
    "python-dotenv>=1.1.0",
]
