[project]
name = "retail-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "databricks-agents>=0.20.0",
    "databricks-langchain>=0.4.2",
    "databricks-sdk>=0.50.0",
    "grandalf>=0.8",
    "langchain>=0.3.24",
    "langgraph==0.3.31",
    "langgraph-checkpoint-postgres>=2.0.21",
    "loguru>=0.7.3",
    "mlflow==2.22.0",
    "openevals>=0.0.19",
    "psycopg[binary,pool]>=3.2.6",
    "pydantic>=2.11.3",
    "python-dotenv>=1.1.0",
    "unitycatalog-ai[databricks]>=0.3.0",
]

[tool.ruff]
# Enable the Ruff formatter
target-version = "py310"  # Specify your Python version
line-length = 88  # Same as Black's default
indent-width = 4

# Add the formatter section
[tool.ruff.format]
quote-style = "double"  # Black uses double quotes
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Set directories to include/exclude
[tool.ruff.lint]
select = ["E", "F", "I"]  # You can add more linting rules here
ignore = []
fixable = ["ALL"]
unfixable = []

# Exclude files/directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]